# xkomp

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  SUPPORT.md  modulefile  version-target.map  version.map
cmake/: XKOMPConfig.cmake.in  run_xfail.cmake
include/: omp.h
include/xkomp/: kmp.h  omp.h  support.h  support.h.in  target.h  taskgraph.h  version.h  xkomp++.h  xkomp.h
interfaces/: 1d-stencil.md  saxpy.cc
interfaces/interop/: coherent.cc  depend.cc  map.cc  omp-target-memcpy.cc  reduction.cc  tmp.cc
interfaces/stencil-1d/: 1d-stencil.md  omp-60-chatgpt.cc  omp-60-task.cc  omp-access.cc
src/: abi.map  api.cc  barrier.cc  device.cc  env.cc  for.cc  fork.cc  master.cc  single.cc  task.cc  taskgraph.cc
src/gomp/: abi.map  parallel.cc  task.cc
src/kmp/: abi.map  allocator.cc  barrier.cc  for.cc  fork.cc  formats.cc  master.cc  single.cc  task.cc  thread.cc
src/kmp/arch/: generic.cc  libffi.cc  z_Linux_asm.S
src/xkomp/: abi.map  parallel.cc  taskgraph.cc
tests/: CMakeLists.txt  common.h  target-access.cc  target.cc  task-dep.cc  task.cc  taskgraph-axpy.cc  taskgraph.cc
tests/composite/: omp_manual_reduction.cc  omp_producer_consumer.cc
tests/directive/access/: omp_access.cc  omp_access_concurrent.cc  omp_access_dag.cc  omp_access_regions.cc  omp_access_stencil_target.cc  omp_access_target.cc  omp_access_target_overlap.cc  omp_access_war_waw.cc
tests/directive/atomic/: omp_atomic.cc
tests/directive/barrier/: omp_barrier.cc
tests/directive/composite/: omp_nested_worksharing.cc  omp_parallel_matvec.cc  omp_producer_consumer.cc
tests/directive/critical/: omp_critical.cc
tests/directive/masked/: omp_masked.cc
tests/directive/parallel/: omp_parallel.cc  omp_parallel_firstprivate.cc  omp_parallel_if.cc  omp_parallel_nested.cc  omp_parallel_num_threads.cc  omp_parallel_reduction.cc
tests/directive/taskgraph/: omp_taskgraph.cc
tests/directive/tasking/: omp_parallel_tasks.cc  omp_task.cc  omp_task_axpy.cc  omp_task_dag.cc  omp_task_depend.cc  omp_task_depend_inoutset.cc  omp_task_depend_mutexinoutset.cc  omp_task_if.cc  omp_task_nested.cc  omp_task_untied.cc  omp_taskgroup.cc  omp_taskwait.cc  omp_taskyield.cc
tests/directive/teams/: omp_teams.cc
tests/directive/worksharing/for/: omp_for.cc  omp_for_collapse.cc  omp_for_increments.cc  omp_for_int64.cc  omp_for_lastprivate.cc  omp_for_nowait.cc  omp_for_schedule_dynamic.cc  omp_for_static_chunk.cc  omp_for_unsigned.cc  omp_parallel_for.cc
tests/directive/worksharing/sections/: omp_sections.cc
tests/directive/worksharing/single/: omp_single.cc  omp_single_copyprivate.cc  omp_single_nowait.cc
tests/master/: omp_master.cc
tests/taskgraph/: omp_taskgraph_axpy.cc
tests/tasking/: omp_task.cc  omp_task_dag.cc  omp_task_depend_mutexinoutset.cc  omp_task_nested.cc  omp_task_untied.cc
tests/worksharing/for/: omp_for_reduction.cc
tests/xkomp++/taskgraph/: omp_taskgraph.cc  omp_taskgraph_axpby.cc  omp_taskgraph_axpby_cpu.cc  omp_taskgraph_axpy_cpu.cc  omp_taskgraph_deps.cc
tests/xkomp/taskgraph/: omp_taskgraph_axpby.cc  omp_taskgraph_axpby_cpu.cc  omp_taskgraph_axpy.cc  omp_taskgraph_axpy_cpu.cc  omp_taskgraph_axpy_cpu_global.cc  omp_taskgraph_axpy_cpu_local.cc  xkomp_taskgraph_axpby_host.cc  xkomp_taskgraph_axpby_host_local.cc  xkomp_taskgraph_axpby_host_struct.cc  xkomp_taskgraph_axpby_target.cc  xkomp_taskgraph_axpy_host_global.cc  xkomp_taskgraph_axpy_host_local.cc  xkomp_taskgraph_axpy_host_ptr.cc  xkomp_taskgraph_host.cc  xkomp_taskgraph_host_deps.cc
